refactor: services refactor