@@ -10,7 +10,6 @@ import org.iq47.model.entity.user.Cart;
 import org.iq47.model.entity.shop.ShopItem;
 import org.iq47.model.entity.user.User;
 import org.iq47.network.CartDAO;
-import org.iq47.network.response.ResponseWrapper;
 import org.springframework.stereotype.Service;
 
 import java.util.Optional;
@@ -40,36 +39,39 @@ public class CartServiceImpl implements CartService {
         } else return null;
     }
 
-    public ResponseWrapper createCart(int userId) {
+    public CartDAO createCart(int userId) {
         User user = userRepository.getById(userId);
-        repository.save(new Cart(user, 0));
-        return new ResponseWrapper(String.format("cart created for user %s", user.getName()));
+        Cart cart = repository.save(new Cart(user, 0));
+
+        log.info("cart created for user %s".formatted(userId));
+
+        return CartDAOConverter.entityToDto(cart);
     }
 
-    public ResponseWrapper addShopItemToCart(int userId, int shopItemId) {
+    public boolean addShopItemToCart(int userId, int shopItemId) {
         User user = userRepository.getById(userId);
         Optional<ShopItem> shopItem = shopItemRepository.findById(shopItemId);
         if (shopItem.isPresent()) {
             Cart cart = repository.findCartByUser(user);
             cart.addShopItem(shopItem.get());
-            cart.setItem_count(cart.getItem_count() + 1);
+            cart.setItemCount(cart.getItemCount() + 1);
             repository.save(cart);
-        } else return new ResponseWrapper("error adding shopitem to cart: item not found");
+        } else return false;
 
-        return new ResponseWrapper("ok");
+        return true;
     }
 
-    public ResponseWrapper removeShopItemFromCart(int userId, int shopItemId) {
+    public boolean removeShopItemFromCart(int userId, int shopItemId) {
         User user = userRepository.getById(userId);
         Optional<ShopItem> shopItem = shopItemRepository.findById(shopItemId);
         if (shopItem.isPresent()) {
             Cart cart = repository.findCartByUser(user);
             cart.removeShopItem(shopItem.get().getId());
-            cart.setItem_count(cart.getItem_count() - 1);
+            cart.setItemCount(cart.getItemCount() - 1);
             repository.save(cart);
-        } else return new ResponseWrapper("error removing shopitem to cart: item not found");
+        } else return false;
 
-        return new ResponseWrapper("ok");
+        return true;
     }
 
 
